ci/k8s/ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-ui
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-ui
  template:
    metadata:
      labels:
        app: rag-ui
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: ui
          image: crpi-jie2r6qhrtiyvvnq-vpc.cn-hangzhou.personal.cr.aliyuncs.com/ali-private/rag-fintech-ui:${IMAGE_TAG}
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf      # 只挂载这一个文件，不覆盖整个目录
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: rag-ui
  namespace: production
spec:
  selector:
    app: rag-ui
  ports:
    - port: 80
      targetPort: 80
